# cnbiros_telepresence

./: .gitignore  CMakeLists.txt  README  package.xml
include/cnbiros_telepresence/: BciBridge.hpp  BciControl.hpp  Flags.hpp  StateControl.hpp
launch/: ros_robotino_no_kinect.launch  ros_robotino_nokinect.launch.OLD  ros_robotino_rqtgraph.launch  ros_robotino_rviz.launch  ros_robotino_telepresence.launch  ros_robotino_telepresence_nokinect.launch  ros_telepresence_robotino.launch
rviz/: config_robotino_telepresence.rviz
scripts/: setup_network.bash
src/: BciBridge.cpp  BciControl.cpp  StateControl.cpp  ros_bcicontrol_robotino.cpp  ros_forcefield_robotino.cpp  ros_fusion_robotino.cpp  ros_robotino_attractors.cpp  ros_robotino_bcibridge.cpp  ros_robotino_navigation.cpp  ros_robotino_repellors.cpp  ros_robotino_statecontrol.cpp
srv/: SetDistanceSrv.srv  SetInputRangeSrv.srv  SetSyncPeriodSrv.srv
